--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ Shopify.routes.root = "/";</script>
 <meta property="og:url" content="http://lucylgao.com">
 <meta property="og:title" content="DIVAQQ ⭐️ Link Situs Pkv Games Bet 200 Deposit Recehan Gampang Menang">
 <meta property="og:type" content="product">
-<meta property="og:description" content="Permainan dengan bet 200 bisa didapatkan pada situs pkv games dengan deposit recehan dan pastinya gampang menang. Dapatkan segera link situs pkv games untuk menikmati permainan gampang menang dengan deposit recehan bet 200."><meta property="og:image" content="http://s1.gifyu.com/images/S1dVh.jpg?v=1714203022">
-  <meta property="og:image:secure_url" content="https://s1.gifyu.com/images/S1dVh.jpg?v=1714203022">
+<meta property="og:description" content="Permainan dengan bet 200 bisa didapatkan pada situs pkv games dengan deposit recehan dan pastinya gampang menang. Dapatkan segera link situs pkv games untuk menikmati permainan gampang menang dengan deposit recehan bet 200."><meta property="og:image" content="http://s10.gifyu.com/images/SokmP.jpg?v=1714203022">
+  <meta property="og:image:secure_url" content="https://s10.gifyu.com/images/SokmP.jpg?v=1714203022">
   <meta property="og:image:width" content="1080">
   <meta property="og:image:height" content="1080"><meta property="og:price:amount" content="0,00">
   <meta property="og:price:currency" content="IDR"><meta name="twitter:card" content="summary_large_image">
@@ -1705,7 +1705,7 @@ Item added to your cart
   </svg>
 </div>
 <div class="product__media media media--transparent">
-      <img src="//s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=1946" alt="" srcset="//s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=246 246w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=493 493w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=600 600w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=713 713w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=823 823w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=990 990w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=1100 1100w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=1206 1206w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=1346 1346w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=1426 1426w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=1646 1646w, //s1.gifyu.com/images/S1dVh.jpg?v=1714203022&amp;width=1946 1946w" width="1946" height="1946" class="image-magnify-lightbox" sizes="(min-width: 1600px) 825px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
+      <img src="//s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=1946" alt="" srcset="//s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=246 246w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=493 493w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=600 600w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=713 713w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=823 823w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=990 990w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=1100 1100w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=1206 1206w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=1346 1346w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=1426 1426w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=1646 1646w, //s10.gifyu.com/images/SokmP.jpg?v=1714203022&amp;width=1946 1946w" width="1946" height="1946" class="image-magnify-lightbox" sizes="(min-width: 1600px) 825px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
     </div>
     <button
       class="product__media-toggle quick-add-hidden product__media-zoom-lightbox"
@@ -2122,9 +2122,9 @@ Item added to your cart
     >
 <img
     class="global-media-settings global-media-settings--no-shadow"
-    srcset="//s1.gifyu.com/images/S1dVh.jpg?v=1714203022&width=550 550w,//s1.gifyu.com/images/S1dVh.jpg?v=1714203022 1080w"
+    srcset="//s10.gifyu.com/images/SokmP.jpg?v=1714203022&width=550 550w,//s10.gifyu.com/images/SokmP.jpg?v=1714203022 1080w"
     sizes="(min-width: 750px) calc(100vw - 22rem), 1100px"
-    src="//s1.gifyu.com/images/S1dVh.jpg?v=1714203022&width=1445"
+    src="//s10.gifyu.com/images/SokmP.jpg?v=1714203022&width=1445"
     alt="DIVAQQ ⭐️ Link Situs Pkv Games Bet 200 Deposit Recehan Gampang Menang"
     loading="lazy"
     width="1100"
@@ -2355,8 +2355,8 @@ Shopify.routes.root = "/";</script>
 <meta property="og:url" content="http://lucylgao.com">
 <meta property="og:title" content="DIVAQQ ⭐️ Link Situs Pkv Games Bet 200 Deposit Recehan Gampang Menang">
 <meta property="og:type" content="product">
-<meta property="og:description" content="Permainan dengan bet 200 bisa didapatkan pada situs pkv games dengan deposit recehan dan pastinya gampang menang. Dapatkan segera link situs pkv games untuk menikmati permainan gampang menang dengan deposit recehan bet 200."><meta property="og:image" content="http://s1.gifyu.com/images/S1dVh.jpg?v=1714203022">
-  <meta property="og:image:secure_url" content="https://s1.gifyu.com/images/S1dVh.jpg?v=1714203022">
+<meta property="og:description" content="Permainan dengan bet 200 bisa didapatkan pada situs pkv games dengan deposit recehan dan pastinya gampang menang. Dapatkan segera link situs pkv games untuk menikmati permainan gampang menang dengan deposit recehan bet 200."><meta property="og:image" content="http://s10.gifyu.com/images/SokmP.jpg?v=1714203022">
+  <meta property="og:image:secure_url" content="https://s10.gifyu.com/images/SokmP.jpg?v=1714203022">
   <meta property="og:image:width" content="1080">
   <meta property="og:image:height" content="1080"><meta property="og:price:amount" content="0,00">
   <meta property="og:price:currency" content="IDR"><meta name="twitter:card" content="summary_large_image">
